--- a/app/src/main/res/layout/mmng_stock_survey.xml
+++ b/app/src/main/res/layout/mmng_stock_survey.xml
@@ -133,9 +133,16 @@
                 android:layout_height="20dp"
                 android:layout_weight="0" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:background="@drawable/text_border_white_back_color"
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/tvInformation2"
-                android:layout_width="match_parent"
+                android:layout_width="150dp"
                 android:layout_height="30dp"
                 android:background="@drawable/text_border_subtitle"
                 android:gravity="center_vertical"
@@ -143,6 +150,14 @@
                 android:textColor="#FFFFFF"
                 android:textSize="15dp"
                 android:textStyle="bold" />
+
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:background="@drawable/text_border_subtitle"
+                android:text="스캔 후 자동저장" />
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
