--- a/app/src/main/res/layout/mmps_all_parts_check.xml
+++ b/app/src/main/res/layout/mmps_all_parts_check.xml
@@ -250,16 +250,52 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tvPartCode"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_weight="0"
+            android:background="@drawable/text_border_blue"
+            android:gravity="fill"
+            android:text="Part Code"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="20dp" />
+
+        <EditText
+            android:id="@+id/etPartCode"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="0"
+            android:background="@drawable/text_border_lightblue"
+            android:inputType="text"
+            android:selectAllOnFocus="true"
+            android:enabled="false"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textColorHint="#c9c9c9"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:background="@drawable/text_border_lightblue"
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+        <TextView
             android:id="@+id/tvPartNo"
             android:layout_width="150dp"
             android:layout_height="40dp"
             android:layout_weight="0"
             android:background="@drawable/text_border_blue"
             android:gravity="fill"
-            android:text="Part No."
+            android:text="제조사 선택"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="20dp" />
+            android:textSize="20dp"/>
 
         <EditText
             android:id="@+id/etPartNo"
@@ -344,39 +380,6 @@
             android:textColorHint="#c9c9c9"
             android:enabled="true"
             android:textSize="20dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:background="@drawable/text_border_lightblue"
-        android:orientation="horizontal"
-        android:visibility="visible">
-
-        <TextView
-            android:id="@+id/textViewStatus"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:layout_weight="0"
-            android:background="@drawable/text_border_blue"
-            android:gravity="fill"
-            android:text="제조사 선택"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="20dp"
-            android:visibility="invisible"/>
-
-        <Spinner
-            android:id="@+id/spnMaker"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_weight="0"
-            android:spinnerMode="dialog"
-            android:textAlignment="center"
-            android:textSize="20dp"
-            android:visibility="invisible"/>
 
     </LinearLayout>
 
