--- a/app/src/main/res/layout/mmng_main.xml
+++ b/app/src/main/res/layout/mmng_main.xml
@@ -66,16 +66,15 @@
                 android:layout_height="10dp" />
 
             <ImageButton
-                android:id="@+id/btnAllPartsCheck"
+                android:id="@+id/btnMaterial_In_Check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:padding="0dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/btn_allpartscheck"
+                android:src="@drawable/btn_material_in_check"
                 android:text="AllPartsCheck"
-                android:textSize="50sp"
-                android:visibility="invisible"/>
+                android:textSize="50sp"/>
 
             <Space
                 android:layout_width="10dp"
