--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,21 @@
                 android:textSize="50sp" />
 
             <Space
+                android:layout_width="10dp"
+                android:layout_height="10dp" />
+
+            <ImageButton
+                android:id="@+id/btn_SMT_Production"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="0dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/btn_smt_production_button"
+                android:text="PartsChange"
+                android:textSize="50sp"/>
+
+            <Space
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
 
@@ -74,21 +89,6 @@
                 android:scaleType="fitCenter"
                 android:src="@drawable/btn_mmps_button"
                 android:text="AllPartsCheck"
-                android:textSize="50sp"/>
-
-            <Space
-                android:layout_width="10dp"
-                android:layout_height="10dp" />
-
-            <ImageButton
-                android:id="@+id/btnPartsChange"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:padding="0dp"
-                android:scaleType="fitCenter"
-                android:src="@drawable/btn_partschange"
-                android:text="PartsChange"
                 android:textSize="50sp"
                 android:visibility="invisible"/>
 
