--- a/app/src/main/res/layout/mmps_all_parts_check.xml
+++ b/app/src/main/res/layout/mmps_all_parts_check.xml
@@ -73,7 +73,7 @@
             android:text="작업자"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/etWorker"
@@ -82,11 +82,12 @@
             android:layout_weight="0"
             android:background="@drawable/text_border_lightblue"
             android:inputType="text"
-            android:enabled="false"
+            android:enabled="true"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textColorHint="#c9c9c9"
-            android:textSize="20dp" />
+            android:hint="작업자를 입력하세요."
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -273,7 +274,7 @@
             android:textAlignment="center"
             android:textColor="#000000"
             android:textColorHint="#c9c9c9"
-            android:textSize="20dp" />
+            android:textSize="20dp"/>
 
     </LinearLayout>
 
@@ -281,9 +282,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
-        android:background="@drawable/text_border_lightblue"
-        android:orientation="horizontal"
-        android:visibility="visible">
+        android:background="@drawable/text_border_white_back_color"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tvPartNo"
@@ -292,10 +292,10 @@
             android:layout_weight="0"
             android:background="@drawable/text_border_blue"
             android:gravity="fill"
-            android:text="제조사 선택"
+            android:text="Part No."
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/etPartNo"
@@ -309,7 +309,7 @@
             android:textAlignment="center"
             android:textColor="#000000"
             android:textColorHint="#c9c9c9"
-            android:textSize="20dp" />
+            android:textSize="20dp"/>
 
     </LinearLayout>
 
@@ -407,8 +407,34 @@
             android:visibility="invisible"/>
     </LinearLayout>
 
-    <Space
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:background="@drawable/text_border_lightblue"
+        android:orientation="horizontal"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/tvMaker"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_weight="0"
+            android:background="@drawable/text_border_blue"
+            android:gravity="fill"
+            android:text="제조사 선택"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="20dp"/>
+
+        <Spinner
+            android:id="@+id/spnMaker"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_weight="0"
+            android:spinnerMode="dialog"
+            android:textAlignment="center"
+            android:textSize="17dp"/>
+
+    </LinearLayout>
 </LinearLayout>
